--- a/projects.json
+++ b/projects.json
@@ -1,25 +1,138 @@
 [
     {
-      "title": "Samurai Warlords",
-      "shortDescription": "Use your army to fight in different scenarios and subdue your enemies. Either fight against real players or play against AI.",
-      "releaseDate": "Dec 3, 2021",
+      "title": "NFTicket",
+      "releaseDate": "2023",
       "developer": "Artur Kashuba",
-      "publisher": "Samurai Warlords",
-      "tags": ["Unity 3D", "Multiplayer", "Android", "iOS"],
-      "detailedDescription": "Dive into the world of feudal Japan where samurais battle for honor and dominance. Samurai Warlords offers an immersive multiplayer experience.",
-      "screenshots": [],
-      "screenshotsExtension": "jpg"
+      "publisher": "iTicket",
+      "tags": ["Unity3D", "C#", "API", "UI", "QR scan", "NFT"],
+      "shortDescription": "iTicket is a ticketing company, and I created a mobile app for them. Lots of work on the UI and runtime loading objects.",
+      "detailedDescription": "Developed dynamic (in runtime) loading .gltf models, using API for dynamic loading posters and tickets."
     },
     {
-      "title": "Another Project",
-      "shortDescription": "Another project short description.",
-      "releaseDate": "Feb 20, 2022",
+      "title": "RudderStack",
+      "releaseDate": "2023",
       "developer": "Artur Kashuba",
-      "publisher": "Another Publisher",
-      "tags": ["Unity 3D", "Single Player", "PC"],
-      "detailedDescription": "Another project detailed description.",
-      "screenshots": [],
-      "screenshotsExtension": "webp"
+      "publisher": "RudderStack",
+      "tags": ["Unity3D", "C#", "API", "SDK"],
+      "shortDescription": "RudderStack is a company that provides analytics SDK for most popular platforms. 40,000+ sites and apps run RudderStack. I developed an SDK for Unity.",
+      "detailedDescription": "Developed SDK for Unity for RudderStack analytics."
+    },
+    {
+      "title": "Samurai Swords Store (SSS)",
+      "releaseDate": "2023",
+      "developer": "Artur Kashuba",
+      "publisher": "Samurai Swords Store",
+      "tags": ["Unity3D", "C#", "API"],
+      "shortDescription": "The application was developed for a company engaged in the production of combat katanas. In the app, users can customize the configuration and order a katana.",
+      "detailedDescription": "Users can customize the configuration and order a katana based on their own designs."
+    },
+    {
+      "title": "Samurai Warlords",
+      "releaseDate": "2024",
+      "developer": "Artur Kashuba",
+      "publisher": "Samurai Warlords",
+      "tags": ["Unity3D", "C#", "Multiplayer"],
+      "shortDescription": "Classic 3D chess game, with the feature: players can use katana, which was created in the SSS app.",
+      "detailedDescription": "3D chess game with integration of katana created in the Samurai Swords Store app."
+    },
+    {
+      "title": "Haunted Houses",
+      "releaseDate": "2022",
+      "developer": "Artur Kashuba",
+      "publisher": "Lumighost Ltd.",
+      "tags": ["Unity3D", "C#", "API", "UI", "Enemy AI"],
+      "shortDescription": "Shooter with dungeon generation, unique to each match. Developed for Lumighost Ltd.",
+      "detailedDescription": "Implemented gameplay systems, AI behaviors, and custom shaders."
+    },
+    {
+      "title": "Heroes Auto Battle",
+      "releaseDate": "2022",
+      "developer": "Artur Kashuba",
+      "publisher": "Heroes Auto Battle",
+      "tags": ["Unity3D", "C#", "UI", "VFX", "Ads"],
+      "shortDescription": "Autochess with more than 50 characters, including shop and in-app purchases.",
+      "detailedDescription": "Developed autochess game with over 50 characters, including in-app purchases."
+    },
+    {
+      "title": "Beaver Lumberjack",
+      "releaseDate": "2021",
+      "developer": "Artur Kashuba",
+      "publisher": "GrayBearLogic",
+      "tags": ["Unity3D", "C#", "UI", "Ads"],
+      "shortDescription": "Gnaw tree, build your dam and block the river.",
+      "detailedDescription": "Developed the Beaver Lumberjack game, where players block rivers by building dams."
+    },
+    {
+      "title": "DeltaP3",
+      "releaseDate": "2021",
+      "developer": "Artur Kashuba",
+      "publisher": "",
+      "tags": ["Unity3D", "C#", "UI"],
+      "shortDescription": "Gnaw tree, build your dam and block the river.",
+      "detailedDescription": "Gnaw tree, build your dam and block the river."
+    },
+    {
+      "title": "Flappy Center",
+      "releaseDate": "2021",
+      "developer": "Artur Kashuba",
+      "publisher": "",
+      "tags": ["Unity3D", "C#", "UI", "Ads"],
+      "shortDescription": "Gnaw tree, build your dam and block the river.",
+      "detailedDescription": "Gnaw tree, build your dam and block the river."
+    },
+    {
+      "title": "Honey Cut",
+      "releaseDate": "2021",
+      "developer": "Artur Kashuba",
+      "publisher": "Mindom Ltd",
+      "tags": ["Unity3D", "C#", "VFX", "Realtime Mesh Modify"],
+      "shortDescription": "Gnaw tree, build your dam and block the river.",
+      "detailedDescription": "Gnaw tree, build your dam and block the river."
+    },
+    {
+      "title": "iBall",
+      "releaseDate": "2023",
+      "developer": "Artur Kashuba",
+      "publisher": "Palbooro Ltd",
+      "tags": ["Unity3D", "C#", "UI", "VFX", "Multiplayer"],
+      "shortDescription": "Gnaw tree, build your dam and block the river.",
+      "detailedDescription": "Gnaw tree, build your dam and block the river."
+    },
+    {
+      "title": "Jiggler",
+      "releaseDate": "2022",
+      "developer": "Artur Kashuba",
+      "publisher": "Artur Kashuba",
+      "tags": ["Unity3D", "C#", "UI", "VFX"],
+      "shortDescription": "Gnaw tree, build your dam and block the river.",
+      "detailedDescription": "Gnaw tree, build your dam and block the river."
+    },
+    {
+      "title": "Klee Run",
+      "releaseDate": "2022",
+      "developer": "Artur Kashuba",
+      "publisher": "",
+      "tags": ["Unity3D", "C#", "UI", "VFX", "NFT"],
+      "shortDescription": "Gnaw tree, build your dam and block the river.",
+      "detailedDescription": "Gnaw tree, build your dam and block the river."
+    },
+    {
+      "title": "Magic Swamp",
+      "releaseDate": "2023",
+      "developer": "Artur Kashuba",
+      "publisher": "Lumighost Ltd.",
+      "tags": ["Unity3D", "C#", "UI", "VFX"],
+      "shortDescription": "Gnaw tree, build your dam and block the river.",
+      "detailedDescription": "Gnaw tree, build your dam and block the river."
+    },
+    {
+      "title": "Mazer Minotazer",
+      "releaseDate": "2021",
+      "developer": "Artur Kashuba",
+      "publisher": "Artur Kashuba",
+      "tags": ["Unity3D", "C#", "VFX", "Procedural Generator"],
+      "shortDescription": "Gnaw tree, build your dam and block the river.",
+      "detailedDescription": "Gnaw tree, build your dam and block the river."
     }
   ]
   
